Fixes #1416 : Stretched Attachments/Pictures issue fixed

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -1234,6 +1234,7 @@ g path:hover {
 		min-height: 240px;
 		> a {
 			height:150px;
+			line-height:138px;
 		}
 		img {
 			width: 100%;
